--- a/test001/src/main/webapp/WEB-INF/config/layouts/layout1.xml
+++ b/test001/src/main/webapp/WEB-INF/config/layouts/layout1.xml
@@ -4,9 +4,11 @@
        "./tiles-config_3_0.dtd">
 <tiles-definitions>
 	<definition name="layout1" template="/WEB-INF/jsp/layouts/templates/Layout1Template.jsp">
+		<put-attribute name="snbMenu" 	value="/WEB-INF/jsp/layouts/snbMenu.jsp" />
 		<put-attribute name="header" 	value="/WEB-INF/jsp/layouts/header.jsp" />
 		<put-attribute name="body" 		value="" />
 		<put-attribute name="footer" 	value="/WEB-INF/jsp/layouts/footer.jsp" />
+		<put-attribute name="logoutModal" 	value="/WEB-INF/jsp/layouts/logoutModal.jsp" />
 	</definition>
 	
 	<definition name="*.layout1" extends="layout1">
