feat:300,000-Deduction insert모달 레이어 추가

--- a/test001/src/main/webapp/css/CommCss.css
+++ b/test001/src/main/webapp/css/CommCss.css
@@ -5,3 +5,6 @@
 /*datepicker custom : old, new*/
 .datepicker > .datepicker-days > table > tbody > tr > td.old ,
 .datepicker > .datepicker-days > table > tbody > tr > td.new{color:#dcdcdc !important;}
+
+#layoutError{display: flex;flex-direction: column;min-height: 100vh;}
+#layoutError #layoutError_content {min-width: 0;flex-grow: 1;}
